# online_trader

./: .gitignore  ADDENDUM_EOD_LIQUIDATION_ADVANTAGE.md  BUILD_STATUS.md  CAPITAL_DEPLETION_BUG_RESOLVED.md  CAPITAL_DEPLETION_FIXES_IMPLEMENTED.md  CLI_SUMMARY.md  CMakeLists.txt  CREATE_MEGA_DOCUMENT_CODE_REVIEW.md  CREATE_MEGA_DOCUMENT_REFACTORING_ROADMAP.md  CRITICAL_FIXES_IMPLEMENTATION_SUMMARY.md  CRITICAL_THRESHOLD_MISMATCH_BUG.md  DATA_CLEANUP_COMPLETE.md  DATA_CONSISTENCY_QUICK_FIXES.md  DATA_INTEGRITY_REVIEW.md  DATA_REVIEW_SUMMARY.txt  DESIGN_PRINCIPLES.md  EXPERT_FEEDBACK_REFINED_ANALYSIS.md  LIVE_TRADING_README.md  LOW_MRD_DETAILED_ANALYSIS_REPORT_MEGA.md  LOW_MRD_DETAILED_ANALYSIS_REPORT_MEGA_MEGA.md  LOW_MRD_FIXED_MEGA.md  MICRO_ADAPTATION_IMPLEMENTATION.md  MIGRATION_SUMMARY.md  MRB_VS_MRD_GUIDE.md  MRD_BREAKTHROUGH_0.65_PERCENT.md  MULTI_SYMBOL_ROTATION_ARCHITECTURE.md  MULTI_SYMBOL_ROTATION_IMPLEMENTATION_COMPLETE.md  OCTOBER_MOCK_RESULTS_SUMMARY.md  ONLINE_ENSEMBLE_IMPROVEMENTS.md  OPTIMIZATION_0_MRD_BUG_COMPLETE_FIX.md  OPTIMIZATION_0_TRADES_ROOT_CAUSES.md  OPTIMIZATION_FIXED_SUMMARY.md  OPTIMIZATION_IMPROVEMENTS_SUMMARY.md  OVERNIGHT_SUMMARY.txt  PERFORMANCE_OPTIMIZATION_MEGADOC.md  PHASE_1_DATA_INFRASTRUCTURE_COMPLETE.md  PHASE_2_4E_CLI_INTEGRATION_COMPLETE.md  PHASE_2_4_BACKEND_INTEGRATION_COMPLETE.md  PHASE_2_ROTATION_STRATEGY_COMPLETE.md  PRODUCTION_WORKFLOW.md  (+31 more)
config/: __init__.py  deterministic_test_config.json  enhanced_psm_config.json  leveraged_ppo_config.yaml  rotation_strategy.json  test_aggressive_v1.json  walk_forward.json  williams_rsi_bb_config.json  williams_rsi_config.json
data/dashboards/: optuna_v1_6_data.js
data/equities/: DUST_RTH_NH.csv  ERX_RTH_NH.csv  ERY_RTH_NH.csv  FAS_RTH_NH.csv  FAZ_RTH_NH.csv  NUGT_RTH_NH.csv  QQQ_SANITY_RANGE.csv  QQQ_test_small.csv  SDS_RTH_NH.csv  SPY_100blocks.csv  SPY_1block.csv  SPY_20blocks.csv  SPY_2blocks.csv  SPY_2krows.csv  SPY_30blocks.csv  SPY_3days.csv  SPY_4blocks_aligned.csv  SPY_4blocks_features.csv  SPY_5blocks.csv  SPY_regime_test.csv  (+10 more)
docs/: ALPACA_PAPER_LIVE_READY.md  ALPACA_SCRIPTS_REVIEW.md  AUTOMATED_TRADING_SETUP.md  AUTO_SHUTDOWN_IMPLEMENTATION.md  BUILD_PROGRESS.md  CODEBASE_CLEANUP_SUMMARY.md  DASHBOARD_CLEANUP_COMPLETE.md  DASHBOARD_SYSTEM.md  DOCUMENTATION_INDEX.md  EMAIL_COMPLETE_SUMMARY.md  EMAIL_DASHBOARD_IMPLEMENTATION_COMPLETE.md  EMAIL_NOTIFICATION_GUIDE.md  EOD_BUG_ANALYSIS_AND_FIX.md  EOD_BUG_FIX_CHECKLIST.md  EOD_BUG_SUMMARY.md  EOD_FIX_IMPLEMENTATION_COMPLETE.md  GMAIL_SETUP_GUIDE.md  INCREMENTAL_WARMUP.md  LAUNCHD_SETUP_GUIDE.md  LAUNCH_SYSTEM_SUMMARY.md  LAUNCH_TRADING_CODE_REVIEW.md  LEVERAGED_ETF_INTEGRATION_COMPLETE.md  LEVERAGED_ETF_PRICES_TODO.md  LIVE_TRADING_GUIDE.md  LIVE_TRADING_PROGRESS_MESSAGES.md  LIVE_TRADING_STATUS_REPORT_2025-10-08.md  MOCK_INFRASTRUCTURE_IMPLEMENTATION_SUMMARY.md  MOCK_INFRASTRUCTURE_QUICK_START.md  MOCK_INFRASTRUCTURE_SUMMARY.md  MOCK_MUST_MATCH_LIVE_EXACTLY.md  MOCK_REPLAY_ACTUAL_RESULTS_ANALYSIS.md  MOCK_REPLAY_SESSION_SUMMARY.md  MOCK_SERVER_TESTING.md  MOCK_SESSION_BUG_ANALYSIS.md  MOCK_SESSION_REPORT_OCT7_2025.md  MOCK_TRADING_CORRECTED_APPROACH.md  MOCK_TRADING_INFRASTRUCTURE_REQUIREMENTS.md  MORNING_BRIEFING_2025-10-09.md  OPTIMIZATION_SUMMARY_V1_2_TO_V1_4.md  OPTUNA_DAILY_OPTIMIZATION_REQUIREMENTS.md  (+8 more)
examples/: rotation_backend_usage.cpp
megadocs/: ADAPTIVE_OPTUNA_FRAMEWORK.md  ALPACA_WEBSOCKET_RESEARCH_FINDINGS.md  ANTI_CHURNING_FIXES_IMPLEMENTATION_SUMMARY.md  BATCH_MOCK_TESTING_IMPLEMENTATION.md  BUG_CATASTROPHIC_CAPITAL_DEPLETION.md  BUG_POSITION_SIZING_RACE_CONDITION.md  BUG_REPORT_ZERO_POSITIONS_CLOSED.md  BUG_REPORT_ZERO_POSITIONS_CLOSED_MEGA.md  BUG_RESOLUTION.md  BUG_SOURCE_MODULES_MAP.md  BUG_WARMUP_DEPLETES_CAPITAL.md  CREATE_MEGA_DOCUMENT_CODE_REVIEW_MEGA.md  DAILY_OPTIMIZATION_WORKFLOW.md  EOD_HARDENING_RESPONSE.md  EOD_LIQUIDATION_BUG_CRITICAL.md  EOD_PRODUCTION_HARDENING_PLAN.md  ET_TIME_AND_EOD_EXIT_CODE_REVIEW.md  ET_TIME_EOD_EXIT_IMPLEMENTATION.md  EXPERT_AI_FIXES_IMPLEMENTATION_SUMMARY.md  EXPERT_FEEDBACK_IMPLEMENTATION_PLAN.md  FEATURE_CACHING_COMPLETE.md  FEATURE_CACHING_DEPRECATED.md  FEATURE_CACHING_FINAL_STATUS.md  FEATURE_CACHING_IMPLEMENTATION_STATUS.md  FEATURE_ENGINE_IMPLEMENTATION_GUIDE.md  FINAL_OPTIMIZATION_REPORT.md  IMPLEMENTATION_PLAN_TO_05_MRB.md  IMPLEMENTATION_SUMMARY_v1_2.md  INTEGRATION_COMPLETE_v2_0.md  LAUNCH_TRADING_SYSTEM_REVIEW.md  LIBWEBSOCKETS_CONNECTION_FAILURE.md  LIVE_TRADING_BUG_SOURCE_MODULES.md  LIVE_TRADING_FEATURE_ENGINE_NOT_READY_BUG.md  LIVE_TRADING_FIX_SUCCESS.md  LIVE_TRADING_ROOT_CAUSE_FOUND.md  MARS_INSTALLATION_AND_STATUS.md  MULTI_SYMBOL_ROTATION_DESIGN_MEGA.md  NAN_BUG_FIX_IMPLEMENTATION.md  NAN_BUG_FIX_IMPLEMENTATION_MEGA.md  NAN_BUG_FIX_IMPLEMENTATION_MEGA_MEGA.md  (+59 more)
quote_simulation/: CMakeLists.txt  README.md  test_quotes.json
quote_simulation/examples/: quote_simulation_example.cpp  spy_mars_cpp_example.cpp
quote_simulation/include/: online_quote_simulator.hpp
quote_simulation/src/: online_quote_simulator.cpp
quote_simulation/tools/: mars_bridge.py  online_quote_simulator.py  spy_historical_training_demo.py  spy_mars_real_training.py  spy_training_demo.py
release/: sentio_cli_latest  sentio_cli_v2.1  sentio_cli_v2.2
repositories/: __init__.py
scripts/: launch_trading.sh  rotation_trading_aggregate_dashboard.py  rotation_trading_dashboard.py  run_2phase_optuna.py  run_ensemble_workflow.sh
services/: __init__.py
spy_mars_demo/: comparison_report.json  continuation_analysis.json  spy_mars_continuation.csv  spy_mars_continuation.json  spy_patterns_analysis.json
spy_mars_real_training/: spy_mars_analysis.json  spy_mars_simulation.csv  spy_mars_simulation.json  spy_trained_patterns.json  summary_report.md
tests/: conftest.py  run_tests.py  test_multi_symbol_data_layer.cpp  test_regime_detector.cpp  test_rotation_strategy.cpp
tools/: compare_visualizations.py  cpp_analyzer_full_report_data.json  cpp_analyzer_full_report_metrics.json  create_mega_document.py  extract_session_data.py  generate_trade_dashboard.py  professional_trading_dashboard.py
(+1047 files in other folders)
